--- a/test/preproc.config
+++ b/test/preproc.config
@@ -4,7 +4,7 @@ params {
     subreads_bam = '@PROJECT_DIR@/test/preproc/m54042_190909_040702_subset.subreads.bam'
     amplicons_json = '@PROJECT_DIR@/test/preproc/amplicons.json'
     barcodes_fasta = '@PROJECT_DIR@/test/preproc/barcodes.fasta'
-    ref_fasta = 'https://hgdownload.cse.ucsc.edu/goldenPath/hg38/chromosomes/chr22.fa.gz'
+    ref_fasta = 'https://purple.psych.bio.uni-goettingen.de/plaster/chr22.fa.gz'
     ccs_min_len = 250
     ccs_max_len = 25000
     ccs_min_acc = 0.99
