--- a/test/typing.config
+++ b/test/typing.config
@@ -3,7 +3,7 @@ params {
     manifest = '@PROJECT_DIR@/test/typing/manifest.csv'
     copy_num = '@PROJECT_DIR@/test/typing/copy_num.csv'
     amplicons_json = '@PROJECT_DIR@/test/typing/amplicons.json'
-    ref_fasta = 'ftp://hgdownload.cse.ucsc.edu/goldenPath/hg38/chromosomes/chr22.fa.gz'
+    ref_fasta = 'https://purple.psych.bio.uni-goettingen.de/plaster/chr22.fa.gz'
     vep_cache_ver = '104'
     vep_assembly = 'GRCh38'
     // TODO - remove following and use default
